force-app/main/default/objects/Products_Requested__c/Products_Requested__c.object-meta.xml
<CustomObject>
    <label>Product Request</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>