force-app/main/default/objects/Products_Requested__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Product2Id</field>
            <operation>equals</operation>
            <valueField>$Source.Product__c</valueField>
        </filterItems>
        <filterItems>
            <field>Asset.Status</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>