force-app/main/default/objects/Products_Requested__c/fields/Evaluation_Form__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Form__c</fullName>
    <label>Evaluation Form</label>
    <referenceTo>Evaluation_Form__c</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>