force-app/main/default/objects/Products_Requested__c/fields/External_Delivery__c.field-meta.xml
<CustomField>
    <fullName>External_Delivery__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send to CEVA?</label>
    <type>Checkbox</type>
</CustomField>