force-app/main/default/objects/Products_Requested__c/fields/Frame_Surface__c.field-meta.xml
<CustomField>
    <fullName>Frame_Surface__c</fullName>
    <label>Frame Surface</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accumax</fullName>
            </value>
            <value>
                <fullName>Accumax Complete</fullName>
            </value>
            <value>
                <fullName>Accumax Convertible</fullName>
            </value>
            <value>
                <fullName>Maxifloat</fullName>
            </value>
            <value>
                <fullName>NP100</fullName>
            </value>
            <value>
                <fullName>NP200</fullName>
            </value>
            <value>
                <fullName>NP50</fullName>
            </value>
            <value>
                <fullName>P310 WS</fullName>
            </value>
            <value>
                <fullName>P500</fullName>
            </value>
            <value>
                <fullName>Pro +</fullName>
            </value>
            <value>
                <fullName>TempurPedic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>