force-app/main/default/objects/Products_Requested__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item/Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SABINA II EE 2020003</fullName>
            </value>
            <value>
                <fullName>GOLVO 9000 2000045</fullName>
            </value>
            <value>
                <fullName>GOLVO 9000 LOW BASE 2000049</fullName>
            </value>
            <value>
                <fullName>VIKING M 2040045</fullName>
            </value>
            <value>
                <fullName>VIKING L 2040044</fullName>
            </value>
            <value>
                <fullName>P870 Resident L:91 W:42 H:30 275 LBS</fullName>
            </value>
            <value>
                <fullName>P1170 Careassist ES, L:90 W:40 H:16 420 LBS</fullName>
            </value>
            <value>
                <fullName>P1190A Advanta2, L:90 W:36 H:33 500 LBS</fullName>
            </value>
            <value>
                <fullName>P1840 TotalCare Bariatric PT, L:93 W:42 H:45 750 LBS</fullName>
            </value>
            <value>
                <fullName>P1900 Sport Connect, L:75.5 W:36 H:18 552 LBS</fullName>
            </value>
            <value>
                <fullName>P3200 VersaCare, L:94.5 W:37 H:18 500 LBS</fullName>
            </value>
            <value>
                <fullName>HR80, L:91 W:40 H:6 300 LBS</fullName>
            </value>
            <value>
                <fullName>HR100, L:93.25 W:40 H:26.5 300 LBS</fullName>
            </value>
            <value>
                <fullName>HR1000, L:80 W:36 H:32.5 420 LBS</fullName>
            </value>
            <value>
                <fullName>P3700 Affinity, L:92 W:39 H:39 500 LBS</fullName>
            </value>
            <value>
                <fullName>P8000 Procedural W/Intel, L:86 W:30 H:23 462 LBS</fullName>
            </value>
            <value>
                <fullName>P8000 Procedure (30), L:83 W:35.5 H:34.25 265 LBS</fullName>
            </value>
            <value>
                <fullName>P8000 Procedure (26), L:83 W:26.5 H:34.25 265 LBS</fullName>
            </value>
            <value>
                <fullName>P8005 Transport, L:83 W:32 H:37.5 265 LBS</fullName>
            </value>
            <value>
                <fullName>P8010 Surgical, L:92 W:29.25 H:33.25 285 LBS</fullName>
            </value>
            <value>
                <fullName>P8020 Electric, L:83 W:30.5 H:34.25 355 LBS</fullName>
            </value>
            <value>
                <fullName>P8040 Trauma, L:83 W:29.25 H:37.5 290 LBS</fullName>
            </value>
            <value>
                <fullName>P8050 OB/GYN, L:83 W:33 H:37 325 LBS</fullName>
            </value>
            <value>
                <fullName>OBT</fullName>
            </value>
            <value>
                <fullName>BEDSIDE CABINET</fullName>
            </value>
            <value>
                <fullName>VISITOR CHAIR</fullName>
            </value>
            <value>
                <fullName>HIGHBACK CHAIR</fullName>
            </value>
            <value>
                <fullName>RECLINER</fullName>
            </value>
            <value>
                <fullName>4 POSITION RECLINER</fullName>
            </value>
            <value>
                <fullName>PREMIUM LG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>