force-app/main/default/objects/Products_Requested__c/fields/NurseCall_System__c.field-meta.xml
<CustomField>
    <fullName>NurseCall_System__c</fullName>
    <label>NurseCall System</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item_Description__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hill-Rom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>