force-app/main/default/objects/Products_Requested__c/fields/Opportunity_Type_Pick__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Pick__c</fullName>
    <label>Opportunity Type Pick</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND((Picklist_Field_Name) = &quot;012E00000000GzP&quot;,</fullName>
            </value>
            <value>
                <fullName>liko)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>