force-app/main/default/objects/Products_Requested__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Frames</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>LIKO Accessories</fullName>
            </value>
            <value>
                <fullName>LIKO lifts</fullName>
            </value>
            <value>
                <fullName>Patient Monitoring/CFCM</fullName>
            </value>
            <value>
                <fullName>Surfaces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>