force-app/main/default/objects/Products_Requested__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number/Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>