force-app/main/default/objects/Products_Requested__c/fields/Sold_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sold_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sold Unit?</label>
    <type>Checkbox</type>
</CustomField>