force-app/main/default/objects/Products_Requested__c/fields/Work_Order_In__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_In__c</fullName>
    <label>Work Order In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>