force-app/main/default/objects/Products_Requested__c/validationRules/Cannot_Change_Eval_Product_if_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Eval_Product_if_Approved</fullName>
    <active>true</active>
    <description>Does not let product or quantity change if already approved.</description>
    <errorConditionFormula>AND (
     ISPICKVAL( Evaluation_Form__r.Approval_Status__c , &apos;Approved&apos;),
      OR(
          ISCHANGED( Item_Description__c ) ,
          ISCHANGED(  Quantity__c ) 
     )
)</errorConditionFormula>
    <errorMessage>You can not edit an eval request after it has been approved</errorMessage>
</ValidationRule>